[gd_scene load_steps=2 format=3 uid="uid://cyu6cq5xuu3tj"]

[ext_resource type="Script" uid="uid://f24pivvnfmpn" path="res://UI/PauseMenu/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 10
script = ExtResource("1_pause")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="PausePanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -220.0
offset_right = 200.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainButtons" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PauseTitle" type="Label" parent="PausePanel/MainButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.1, 0.1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 42
text = "⏸ PAUSA"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="PausePanel/MainButtons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PausePanel/MainButtons"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 26
text = "RIPRENDI"
flat = true

[node name="SettingsButton" type="Button" parent="PausePanel/MainButtons"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 26
text = "IMPOSTAZIONI"
flat = true

[node name="MainMenuButton" type="Button" parent="PausePanel/MainButtons"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 26
text = "TORNA MENU PRINCIPALE"
flat = true

[node name="SettingsPanel" type="Control" parent="PausePanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel/SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="SettingsTitle" type="Label" parent="PausePanel/SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.1, 0.1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "IMPOSTAZIONI"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="PausePanel/SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="PausePanel/SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Volume: 100%"

[node name="VolumeSlider" type="HSlider" parent="PausePanel/SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Spacer2" type="Control" parent="PausePanel/SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SensitivityLabel" type="Label" parent="PausePanel/SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Sensibilità: 1.0"

[node name="SensitivitySlider" type="HSlider" parent="PausePanel/SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0

[node name="Spacer3" type="Control" parent="PausePanel/SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="BackButton" type="Button" parent="PausePanel/SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "← INDIETRO"
flat = true

[connection signal="pressed" from="PausePanel/MainButtons/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausePanel/MainButtons/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PausePanel/MainButtons/MainMenuButton" to="." method="_on_main_menu_pressed"]
[connection signal="value_changed" from="PausePanel/SettingsPanel/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="PausePanel/SettingsPanel/VBoxContainer/SensitivitySlider" to="." method="_on_sensitivity_slider_value_changed"]
[connection signal="pressed" from="PausePanel/SettingsPanel/VBoxContainer/BackButton" to="." method="_on_back_pressed"]
